# gupop_tracker

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  homework_0.md  homework_1.md
services/accounter/: entrypoint.sh  manage.py  pyproject.toml
services/accounter/accounter/: asgi.py  settings.py  urls.py  wsgi.py
services/accounter/bills/: events.py  models.py  queue.py  urls.py  views.py
services/accounter/bills/management/commands/: worker.py
services/accounter/bills/migrations/: 0001_initial.py
services/broker/: definitions.json  rabbitmq.conf
services/dashik/: manage.py  pyproject.toml
services/dashik/api/: events.py  queue.py  roles.py  urls.py  views.py
services/dashik/api/management/commands/: worker.py
services/dashik/dashik/: asgi.py  settings.py  urls.py  wsgi.py
services/hr/: pyproject.toml
services/hr/hr/: asgi.py  settings.py  urls.py  wsgi.py
services/hr/user_manager/: keycloack.py  keycloak.py  models.py  queue.py  urls.py  views.py
services/hr/user_manager/migrations/: 0001_initial.py  0002_alter_user_user_id.py
services/hr/user_manager/templates/user_manager/: list_users.html
services/tracker/: Dockerfile  pyproject.toml
services/tracker/tasks/: events.py  models.py  queue.py  urls.py  views.py
services/tracker/tasks/management/commands/: worker.py
services/tracker/tasks/migrations/: 0001_initial.py  0002_task.py  0003_alter_task_status.py
services/tracker/tracker/: settings.py
