[tool.poetry]
name = "hr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
requests = "^2.31.0"
python-keycloak = "^3.9.1"
pika = "^1.3.2"
pydantic = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
